--- a/resources/style.css
+++ b/resources/style.css
@@ -39,7 +39,7 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  color: #202124;
+  color: #232629;
 }
 #flex-container,
 #update-history-container {
@@ -328,4 +328,17 @@ div.limit-width {
 div.indent-minus {
   text-indent: calc(-5.4 * var(--font-size));
   margin-left: calc(5.4 * var(--font-size));
+}
+a {
+  color: #0074cc;
+  text-decoration: none;
+}
+a:visited {
+  color: #0063bf;
+}
+a:hover {
+  color: #0a95ff;
+}
+a:active {
+  color: #0a95ff;
 }
